# downnd

./: Cargo.toml  wget-list-sysv
src/: argom.rs  lib.rs  main.rs
test/: test_bin.txt  test_url.txt  test_wallpaper.txt
