[package]
name = "downnd"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.64"
clap = { version = "3.2.20", features = ["derive"] }
futures = "0.3.24"
indicatif = "0.17.0"
reqwest = { version = "0.11.11", features = ["json", "stream"] }
tokio = { version = "1.21.0", features = ["full"] }

[profile.release]
lto = true
opt-level = 3
debug = 0
strip = true
incremental = true